<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80dedede"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.wondercars.ridetrackerexecutive.Activities.NavigationActivity">

    <include
        layout="@layout/common_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/size_50dp"
        android:layout_marginRight="@dimen/size_50dp"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@drawable/blue_rectangle_with_circular_corners"
            card_view:cardCornerRadius="10dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_book_slot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightestBlue"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.wondercars.ridetrackerexecutive.CustomClasses.MuseosanBoldTextView
                    style="@style/text_style_black_normal_22dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/book_slot" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            card_view:cardCornerRadius="10dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_manage_slots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/lighterBlue"
                android:weightSum="1">

                <com.wondercars.ridetrackerexecutive.CustomClasses.MuseosanBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    style="@style/text_style_black_normal_22dp"
                    android:text="@string/manage_slots" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            card_view:cardCornerRadius="10dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_start_ride"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/lightBlue"
                android:weightSum="1">

                <com.wondercars.ridetrackerexecutive.CustomClasses.MuseosanBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_margin_10dp"
                    android:gravity="center_vertical|center_horizontal"
                    style="@style/text_style_black_normal_22dp"
                    android:text="@string/start_ride" />

            </LinearLayout>


        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            card_view:cardCornerRadius="10dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_start_testdrive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/lightBlue"
                android:weightSum="1">

                <com.wondercars.ridetrackerexecutive.CustomClasses.MuseosanBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_margin_10dp"
                    android:gravity="center_vertical|center_horizontal"
                    style="@style/text_style_black_normal_22dp"
                    android:text="Test Drive" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            card_view:cardCornerRadius="10dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_view_rides"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/darkBlue"
                android:weightSum="1">

                <com.wondercars.ridetrackerexecutive.CustomClasses.MuseosanBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_margin_10dp"
                    android:gravity="center_vertical|center_horizontal"
                    style="@style/text_style_black_normal_22dp"
                    android:text="@string/view_rides" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
